[package]
name = "pacmanager"
version = "0.2.1"
description = "A utility to interact with any package manager on any Linux distro"
repository = "https://github.com/Normantas/pacmanager"
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.3", features = ["derive"] }
dialoguer = "0.11.0"
futures-lite = "2.2.0"
pacmanager_wrapper = { version = "0.2.0" }
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
whatadistro = "0.1.0"
